# gha-docker-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-alpine  Dockerfile-python  README.md  actions.yml  pyproject.toml
docs/: CONTRIBUTING.md  README.md  SECURITY.md
src/: entrypoint.sh  main.py
