[tool.poetry]
name = "gha-move-cards"
version = "0.1.0"
description = "GitHub Action to act upon project cards"
authors = ["Jonathan González <jgonf@safebytelabs.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
